# CFiddle

./: .gitignore  Makefile  PackagesToInnstall.org  README.md  c_dbus1.c  dbus_example.c  fileutil.c  gtk_simple_app.c  gtk_simple_app_with_btn.c  hello_gtk_notify.c  msq_q.cpp  notify.c  py_dbus1.py  read_web.c  read_xml.c  simp_client.c  simp_server.c  test.txt
C11/Threads/: thread_ex1.c  thread_ex2.c
NewCPP/: Makefile  Makefile~  test1.cpp  test1.cpp~
SDL/: sdk_ex_1.c
Snippets/: swap_without_temp.c
Wind/: #linked_list.h#  DebugMon.c  Makefile  Makefile~  application.c  application.h  avtest.c  button.c  button.h  checkbox.c  checkbox.h  desktop.c  desktop_icons.c  dialog.c  dialog.h  dict.c  dllmain.cpp  dllmain.cpp~  env.ps1  form.c  form.h  goals.org  linked_list.c  linked_list.h  log.c  log.h  main.c  make.ps1  outputdbg.c  playwav.c  portaudio.c  wav.h  wind.h  wind.h~  wind.org  wind_test.cpp  windbg.c  windbg.cpp
audio_db/: createdb.py  schema.sql
cal/: cal.c
diskinfo/: diskinfo.c
efl/: efl_example1.c
ejdb2/: CMakeLists.txt  example1.c
ffmpeg/: Makefile  ffmpeg1.c  libav_ex1.c
glib/: .gitignore  CMakeLists.txt  Makefile  Makefile.orig  glib_glist.c  glib_variant_ex.c
glibx/: CMakeLists.txt  g_path.c
gst/: .gitignore  CMakeLists.txt  Makefile  Makefile.orig  basic-tutorial-1  basic-tutorial-1.c  createdb.bash  file_scan.c  file_util.c  gst_discover.c  gst_mp3_audio.c  gst_mp3_ui.c  gst_simple_audio.c  notes.txt  tracks.sql
gst/myplayer/: CMakeLists.txt  Makefile  TODO.txt  config.c  config.h  datastore.c  datastore.h  gst.c  gst.h  gst_mp3_ui.c  gui.c  gui.h  logging.c  logging.h  main.c  myplayer
kernel_module/: lkm_example_2.c
kernel_module/lkm_template/: Makefile  lkm_template.c
libs/argtable3/: README.md  argtable3.c
libs/argtable3/examples/: CMakeLists.txt
libs/argtable3/tests/: CMakeLists.txt  argtable3_private.h
meson_fiddle/simple_gtk/: main.c  meson.build
meson_fiddle/simple_gtk/builddir/: .ninja_deps  .ninja_log  build.ninja  compile_commands.json  demo
meson_fiddle/simple_gtk/builddir/meson-logs/: meson-log.txt
meson_fiddle/simple_gtk/builddir/meson-private/: sanitycheckc.c
msglib/: CMakeLists.txt
msglib/src/: msglib.c  msglib.h
octave_dev/: example1.c
pthreads/: CMakeLists.txt  pthread_ex1.c
sqlite/: CMakeLists.txt  Makefile  Makefile.orig  database.dia  scan_audio_dir.c  sqlite_getversion  sqlite_getversion.c  sqlite_getversion2.c  sqlite_mytest.c
sysi/: Makefile  process.cpp
util/: dirty_log.h  swap.c
walk/: walk.c
whitedb/: example1  example1.c
